--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:57:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:57:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -4
 -1 thru 9</td>
       <td>Hideki Matsuyama -2
 -2 thru 10</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -172,38 +172,6 @@ E (F)</td>
 -2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele(W) +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -4
@@ -220,68 +188,36 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -4
 -1 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Talor Gooch E
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-6</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Hideki Matsuyama -2
--2 thru 10</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Will Zalatoris -1
 E (F)</td>
-      <td class="greyout">Viktor Hovland +4
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-6</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
+      <td class="greyout">Xander Schauffele(W) +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -316,6 +252,54 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Talor Gooch E
+E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-5</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
+      <td>Hideki Matsuyama -2
+-2 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -2
@@ -348,20 +332,20 @@ Missed Cut</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-5</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Tyrrell Hatton +2
-+2 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -380,16 +364,32 @@ Missed Cut</td>
 E (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Tyrrell Hatton +2
++2 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 (F)</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Shane Lowry -2
 -3 thru 13</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 10</td>
       <td class="greyout">Brooks Koepka +6
@@ -397,15 +397,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Hideki Matsuyama -2
 -2 thru 10</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
       <td>Talor Gooch E
 E thru 13</td>
+      <td>Cameron Smith E
++4 thru 12</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout">Brooks Koepka +6
@@ -413,11 +413,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Scottie Scheffler -4
 -1 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
       <td>Patrick Cantlay +1
@@ -426,38 +426,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -4
--1 thru 9</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Billy Horschel +3
-+1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -476,35 +444,35 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -2
--2 thru 10</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
+      <td>Scottie Scheffler(W) -4
+-1 thru 9</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Billy Horschel +3
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td class="greyout leftborder">Marc Leishman +4
+      <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -1
+      <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -524,6 +492,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -2
+-2 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry(W) -2
@@ -538,6 +522,22 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Brian Harman +5
 +3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -572,22 +572,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">0</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -4
@@ -620,52 +604,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Will Zalatoris -1
-E (F)</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
+      <td>Cameron Smith E
++4 thru 12</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka +6
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -2
--2 thru 10</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +2
-+3 thru 11</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -684,18 +636,34 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">BCREAMED</td>
       <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Tiger Woods +2
-+3 thru 11</td>
-      <td class="greyout leftborder">Sam Burns +5
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Sam Burns +5
 +2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -732,6 +700,22 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 10</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Rory McIlroy(W) +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +2
++3 thru 11</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -746,6 +730,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Tiger Woods +2
++3 thru 11</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -778,38 +778,6 @@ E (F)</td>
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">4</td>
-      <td>Joaquin Niemann -2
-+1 thru 11</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -876,6 +844,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">5</td>
+      <td>Joaquin Niemann -2
++1 thru 11</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">5</td>
       <td>Collin Morikawa(W) -1
@@ -889,6 +873,22 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
     <tr>
@@ -908,22 +908,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Bubba Watson +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
@@ -938,6 +922,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">6</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Bubba Watson +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1037,9 +1037,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">8</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
+      <td class="bigbold">9</td>
+      <td>Cameron Smith E
++4 thru 12</td>
       <td>Justin Thomas(W) +2
 -2 thru 10</td>
       <td>Rory McIlroy +2
