--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:57:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:57:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,38 +172,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 10</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -4
--1 thru 9</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Collin Morikawa -1
@@ -218,6 +186,38 @@ E thru 9</td>
 -2 thru 10</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Matthew Fitzpatrick E
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -252,22 +252,6 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">0</td>
-      <td>Joaquin Niemann -2
-+1 thru 11</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 12</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
@@ -284,20 +268,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Rory McIlroy +2
+      <td>Joaquin Niemann -2
++1 thru 11</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 12</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -332,18 +316,18 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -362,6 +346,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
