--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:22:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:22:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,17 +157,17 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -4
 -1 thru 10</td>
       <td>Shane Lowry -2
 -3 thru 14</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Tony Finau E
-+1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td class="greyout leftborder">Tony Finau +1
++2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 12</td>
     </tr>
@@ -348,22 +348,6 @@ Missed Cut</td>
 E (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Shane Lowry -2
--3 thru 14</td>
-      <td>Tony Finau E
-+1 thru 10</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -4
@@ -394,6 +378,22 @@ E (F)</td>
 -2 thru 12</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Shane Lowry -2
+-3 thru 14</td>
+      <td>Matthew Fitzpatrick E
++1 (F)</td>
+      <td>Tony Finau +1
++2 thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -700,22 +700,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Tony Finau E
-+1 thru 10</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -762,6 +746,22 @@ E (F)</td>
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Tony Finau +1
++2 thru 11</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
