--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:22:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:22:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -4
--1 thru 10</td>
-      <td>Shane Lowry -2
--3 thru 14</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau E
-+1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 12</td>
-    </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-7</td>
@@ -172,20 +156,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -4
+-1 thru 10</td>
+      <td>Shane Lowry -2
+-3 thru 14</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Daniel Berger -1
-E thru 13</td>
-      <td>Tony Finau E
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
-      <td class="greyout">Brooks Koepka +6
+      <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td class="greyout leftborder">Tony Finau +1
++2 thru 11</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -218,6 +202,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Daniel Berger -1
+E thru 13</td>
+      <td>Tony Finau +1
++2 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 12</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -279,7 +279,7 @@ E thru 12</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 13</td>
+E thru 14</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -317,13 +317,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Tony Finau E
-+1 thru 10</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td>Tony Finau +1
++2 thru 11</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
