--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:33:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:34:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -5
+-2 thru 12</td>
+      <td>Shane Lowry -3
+-4 thru 15</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau E
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 12</td>
+    </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-9</td>
@@ -154,22 +170,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -5
--2 thru 12</td>
-      <td>Shane Lowry -3
--4 thru 15</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Tony Finau +1
-+2 thru 11</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -204,6 +204,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau E
++1 thru 12</td>
+      <td>Daniel Berger E
++1 thru 14</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 12</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry -3
@@ -232,22 +248,6 @@ E (F)</td>
 -2 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Daniel Berger E
-+1 thru 14</td>
-      <td>Tony Finau +1
-+2 thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -317,13 +317,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
+      <td>Tony Finau E
++1 thru 12</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Tony Finau +1
-+2 thru 11</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
